--- a/Learning_Grids/index.html
+++ b/Learning_Grids/index.html
@@ -23,12 +23,10 @@
     </div>
     <div class="navbar">
       <ul id="main_nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">SERVICES</a></li>
+        <li><a href="#">BLOG</a></li>
+        <li><a href="#">CONTACT</a></li>
       </ul>
     </div>
     <div class="left">
@@ -43,28 +41,13 @@
     <div class="section">
       <div class="row">
         <div class="column">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Fun Facts # 1 Women naturally tend to have darker lips and skin around the eyes. So, our brains subconsciously note that as a sign of femininity. The more color contrast between a woman’s eyes and lips and her skin tone, the more feminine, and thus evolutionary attractive, she is seen. Lipstick and eye shadow are makeup staples because they enhance those features.
         </div>
         <div class="column">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Fun Facts # 2 Researchers showed the pictures of women’s faces ranging from zero makeup to fully made up and several in between to men and women and asked them to judge which photos were the most attractive. They found that, on average, women were rated the most attractive with 60% of the makeup they put on for a night out. In other words, most women wear so much makeup that it exceeds what is considered attractive. Another study found that when makeup is not overdone, it makes women appear more likeable, trustworthy and competent. 
         </div>
         <div class="column">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Fun Facts # 3 Research shows that foundation is the cosmetic that has the biggest impact on how women are perceived. This is especially important at work because research shows that women who wear makeup have higher earnings and promotion potential. Skin tone discolorations, tired eye bags and blemishes can make you look tired or sickly.
         </div>
       </div>
     </div>
@@ -76,8 +59,9 @@
       <a href="#" class="fa fa-snapchat-ghost"></a>
       <div class="info-here">
         <p>Contact : Rozee Shrestha</p>
+          <p>Phone : 1(123)-456-7890</p>
         <p>Email : makeupbyrozy@comingsoon.com</p>
-        <p>Phone : 1(123)-456-7890</p>
+      
       </div>
     </div>
   </div>
