--- a/Learning_Grids/index.html
+++ b/Learning_Grids/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/custom.css"> <!-- Custom CSS except the boilerplates -->
   <meta name="theme-color" content="#fafafa">
-  <link href="https://fonts.googleapis.com/css?family=Cookie|Great Vibes|Gruppo|Bad Script|Lovers Quarrel|Stalemate&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Great Vibes|Gruppo|Stalemate&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <body>
