--- a/index2.html
+++ b/index2.html
@@ -243,12 +243,12 @@
                     <header>
                         <h1>Sachin R.</h1>
                         <h1>sachink.rb@gmail.com</h1>
-                        <h2>{ Coding gets me going every morning } [ 'myGoal' ] { To learn at least one cool thing everyday }<br> Portfolio Website: <a href="https://sachinkrb.github.io">sachinkrb.github.io</a></h2>
+                        <h2>[ 'myGoal' ] { To learn at least one cool thing everyday }<br> Portfolio Website: <a href="https://sachinkrb.github.io">sachinkrb.github.io</a></h2>
                         <h4></h4>
                     </header>
                     <div class="resume-frame-2">
                         <section class="resume-frame-3">
-                            <h1>{ Highlighted Skills }</h1>
+                            <h1>[ Highlighted Skills ]</h1>
                             <div>
                                 <h2>Favorite Things</h2>
                                 <ul>
@@ -324,7 +324,7 @@
                             </div>
                         </section>
                         <section>
-                            <h1>{ Tiny Projects }</h1>
+                            <h1>[ Tiny Projects ]</h1>
                             <article>
                                 <hgroup>
                                     <h1>Personal Tiny Creative Works & Workshops</h1>
@@ -347,7 +347,7 @@
                             </article>
                         </section>
                         <section>
-                            <h1>{ Work Background }</h1>
+                            <h1>[ Work Background ]</h1>
                             <article>
                                 <hgroup>
                                     <h1>Senior Apple Advisor at Teleperformance, Work At Home</h1>
@@ -427,7 +427,7 @@
                             </article>
                         </section>
                         <section>
-                            <h1>{ Education }</h1>
+                            <h1>[ Education ]</h1>
                             <article>
                                 <hgroup>
                                     <h1>Orchid Science College, Bharatpur, Nepal</h1>
