--- a/index2.html
+++ b/index2.html
@@ -334,6 +334,7 @@
                                 </div>
                                 <ul>
                                     <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">Working on Responsive Design Website Prototype for Django Project (Current) </a></li>
+                                    <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">Working on a Makeup Website for Spouse (Current) </a></li>
                                     <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Github Powered Portfolio Website (sachinkrb.github.io)</a></li>
                                     <li><a href="http://linuxchats.com/" target="_blank" style="color:black">Linux Chats Website built using Wordpress as CMS (linuxchats.com)</a></li>
                                     <li><a style=" color: black;" href="howtohtmlcss.pdf" download> Personal Research-How To Start Best HTML&CSS Coding </a></li>
