--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@ body {
                             80% Complete
                         </div>
                     </div>
+                    <p>Lightroom & Photoshop</p>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                            70% Complete
+                        </div>
+                    </div>
                     <hr>
                     <!-- Currently Focused On -->
                     <span class="fa-stack">
@@ -112,7 +118,6 @@ body {
                     <b>Currently Focused On</b>
                     <p></p>
                     <p>Python and Django</p>
-                    <p>Building Websites using Django</p>
                     <hr>
                     <!-- Languages -->
                     <span class="fa-stack">
@@ -139,7 +144,7 @@ body {
                     <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> My Github Account For Current Projects</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> My Codepen.io Account</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> My Web Resume Link Here</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="#" style="color:black"> Django Powered Website Coming Soon!</a><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://www.facebook.com/lensupphotos/" target="_blank" style="color:black"> Yes, I do photography as a hobby. Ask me anything on it!</a><br><br>
                     <h2><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h2>
                     <hr>
                     <h5><b>Teleperformance USA - Senior Apple Advisor - Work From Home</b></h5>
@@ -156,7 +161,7 @@ body {
                     <hr>
                     <h5><b>Academic Computer Center - University IT Support</b></h5>
                     <h6><i class="fa fa-calendar "></i> Nov 2007 - May 2009</h6>
-                    <p>Assisted in deployment, configuration of PCs, MACs, printers & scanners including software troubleshooting and updates. Assisted students on working with various Microsoft products. Taken classes on Adobe Photoshop & Illustrator. </p>
+                    <p>Assisted in deployment, configuration of PCs, MACs, printers & scanners including software troubleshooting and updates. Assisted students on working with various Microsoft products. Taken classes on Adobe Photoshop & Illustrator. </p><br>
                     <h2><i class="fa fa-graduation-cap" style="color:  #5ABA5A"></i> Education</h2>
                     <hr>
                     <h5><b>Online Learning</b></h5>
@@ -165,7 +170,7 @@ body {
                     <hr>
                     <h5><b>Minnesota State University</b></h5>
                     <h6><i class="fa fa-calendar "></i> 2005 - 2009</h6>
-                    <p>Information Technology </p>
+                    <p>Information Technology ( NOT A GRAD ! )</p>
                     <hr>
                     <h5><b>Orchid Science College</b></h5>
                     <h6><i class="fa fa-calendar"></i> 2002 - 2004</h6>
