--- a/index2.html
+++ b/index2.html
@@ -255,6 +255,7 @@
                                     <li>HTML</li>
                                     <li>CSS</li>
                                     <li>JavaScript</li>
+                                    <li>React</li>
                                     <li>Python</li>
                                     <li>Django</li>
                                     <li>BootStrap 4</li>
@@ -263,6 +264,7 @@
                                     <li>Java</li>
                                     <li>WAMP & XAMPP</li>
                                     <li>Git & GitHub</li>
+                                    <li>Lightroom & Photoshop</li>
                                 </ul>
                                 <ul>
                                     <li>HTML [ Forms, Graphics, Media, APIs, HTML5 ]</li>
@@ -344,6 +346,7 @@
                                     <li><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black">Codepen.io Account</a></li>
                                     <li><a href="https://repl.it/@CiscoTest" target="_blank" style="color:black">Repl.it Account</a></li>
                                     <li><a href="https://www.sololearn.com/Profile/3050404" target="_blank" style="color:black">Sololearn Account</a></li>
+                                    <li><a href="https://www.facebook.com/lensupphotos/" target="_blank" style="color: black">Yes, I do photography as a hobby! Ask me anything on it!</a></li>
                                 </ul>
                             </article>
                         </section>
@@ -444,7 +447,7 @@
                                     <p>2005 - 2009</p>
                                 </hgroup>
                                 <ul>
-                                    <li>Information Technology</li>
+                                    <li>Information Technology ( NOT A GRAD ! )</li>
                                 </ul>
                             </article>
                         </section>
