--- a/index.html
+++ b/index.html
@@ -147,8 +147,12 @@ body {
                     <i class="fa fa-check-circle-o"></i><a href="https://www.facebook.com/lensupphotos/" target="_blank" style="color:black"> Yes, I do photography as a hobby. Ask me anything on it!</a><br><br>
                     <h2><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h2>
                     <hr>
+                    <h5><b>LiveOps - Independent Contractor - Work From Home</b></h5>
+                    <h6><i class="fa fa-calendar "></i><span> July 2019 - Current</span></h6>
+                    <p>Working as an independent customer service contractor for different retail and non-retail clients.</p>
+                    <hr>
                     <h5><b>Teleperformance USA - Senior Apple Advisor - Work From Home</b></h5>
-                    <h6><i class="fa fa-calendar "></i><span> Jul 2017 - Current</span></h6>
+                    <h6><i class="fa fa-calendar "></i><span> Jul 2017 - June 2019</span></h6>
                     <p>Worked on troubleshooting software and hardware issues on iPhones, Macs, Apple Watches, Beats and accessories. Carefully followed Apple Internal Use Only articles. Worked with system folders and gained familarity on functions/features of listed Apple products. Reported new updates bugs and customer's complaints.</p>
                     <hr>
                     <h5><b>United Health Group - Web Developer - Short-Term IT Contract Job</b></h5>
