--- a/index2.html
+++ b/index2.html
@@ -243,7 +243,7 @@
                     <header>
                         <h1>Sachin R.</h1>
                         <h1>sachink.rb@gmail.com</h1>
-                        <h2>[ 'myGoal' ] { To learn at least one cool thing everyday }<br> Portfolio Website: <a href="https://sachinkrb.github.io">sachinkrb.github.io</a></h2>
+                        <h2>myGoal => { "To learn at least one cool thing everyday" }<br> Portfolio Website: <a href="https://sachinkrb.github.io">sachinkrb.github.io</a></h2>
                         <h4></h4>
                     </header>
                     <div class="resume-frame-2">
@@ -354,8 +354,21 @@
                             <h1>[ Work Background ]</h1>
                             <article>
                                 <hgroup>
+                                    <h1>Liveops-Independent Contractor, Work At Home</h1>
+                                    <p>July 2019 – Current</p>
+                                </hgroup>
+                                <div>
+                                    <p><strong>Environment</strong>Okta, Slack, Five9, Windows</p>
+                                </div>
+                                <ul>
+                                    <li>Working as an independent customer service contractor for different retail and non-retail clients.</li>
+                                    <li>Resolving products and accounts issues</li>
+                                </ul>
+                            </article>
+                            <article>
+                                <hgroup>
                                     <h1>Senior Apple Advisor at Teleperformance, Work At Home</h1>
-                                    <p>July 2017 – Current</p>
+                                    <p>July 2017 – June 2019</p>
                                 </hgroup>
                                 <div>
                                     <p><strong>Environment</strong>: macOS, iOS, Apple Multiple Internal Tools, Apple Support Articles, Apple Devices, MacOS Manuals, iOS Manuals, Apple Internal Use Only Articles.</p>
@@ -368,9 +381,9 @@
                                     <li>Isolated & categorized issues to keep proper written logs of software and hardware issues.</li>
                                     <li>Setup repair appointment for hardware related issues.</li>
                                     <li>Studied and reported arising software and hardware issues with Apple products.</li>
-                                    <li>Worked on new bugs generated with every software updates and freshly launched appleproducts.</li>
+                                    <li>Worked on new bugs generated with every software updates and freshly launched Apple products.</li>
                                     <li>Maintained proper access to consumers apple id, icloud account and private information.</li>
-                                    <li>Received numerous completely satisfied surveys(goals achieved upto 100%) and kudos fromnumerous apple consumers.</li>
+                                    <li>Received numerous completely satisfied surveys(goals achieved up-to 100%) and kudos from numerous apple consumers.</li>
                                 </ul>
                             </article>
                             <article>
@@ -404,11 +417,10 @@
                                     <p><strong>Environment</strong>: Windows 7/10, Einstein 2.0, Avaya, CiscoVPN, RDS browser, SDC Workbench, Spark, BlueJeans, Various DSL Modems, Routers.</p>
                                 </div>
                                 <ul>
-                                    <li>Professionally handled calls passed on by tiers associated with comcast customers internet issues.</li>
-                                    <li>Discussed and asked proper questions to get to the root of the issue.</li>
+                                    <li>Professionally handled calls passed on by tiers associated with Comcast customers Internet issues.</li>
                                     <li>Studied Signal levels in details to look for RF issues and scheduled a technician if needed to correct the reported issue.</li>
                                     <li>Logged into customers routers and modems remotely to troubleshoot and manipulate the settings as well as read logs to determine the health of those devices.</li>
-                                    <li>Ran proximity checks to determine outages and isolates intermittent internet issues.</li>
+                                    <li>Ran proximity checks to determine outages and isolates intermittent Internet issues.</li>
                                 </ul>
                             </article>
                             <article>
@@ -421,7 +433,7 @@
                                 </div>
                                 <ul>
                                     <li>Supported IT leads in deploying and configuring Window OS in several buildings on campus.</li>
-                                    <li>Used PXE boot, Wake on Lan(WOL), and protocols like BOOTP/DHCP/TFTP.</li>
+                                    <li>Used PXE boot, Wake on LAN(WOL), and protocols like BOOTP/DHCP/TFTP.</li>
                                     <li>Assisted in removing old hardware parts to upgrade and test old hardwares.</li>
                                     <li>Assisted students in working with various softwares, including removal and installation of windows and third party softwares.</li>
                                     <li>Maintained proper security access to classroom labs.</li>
