--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ body {
                     <i class="fa fa-check-circle-o"></i><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black"> My Github Account For Current Projects</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black"> My Codepen.io Account</a><br>
                     <i class="fa fa-check-circle-o"></i><a href="https://sachinkrb.github.io/index2.html" target="_blank" style="color:black"> My Web Resume Link Here</a><br>
-                    <i class="fa fa-check-circle-o"></i><a href="https://www.facebook.com/lensupphotos/" target="_blank" style="color:black"> Yes, I do photography as a hobby. Ask me anything on it!</a><br><br>
+                    <i class="fa fa-check-circle-o"></i><a href="https://www.facebook.com/snrphotos/" target="_blank" style="color:black"> Yes, I do photography as a hobby. Ask me anything on it!</a><br><br>
                     <h2><i class="fa fa-suitcase" style="color:  #5ABA5A"></i> Work Experience</h2>
                     <hr>
                     <h5><b>LiveOps - Independent Contractor - Work From Home</b></h5>
