--- a/index2.html
+++ b/index2.html
@@ -354,15 +354,15 @@
                             <h1>[ Work Background ]</h1>
                             <article>
                                 <hgroup>
-                                    <h1>Liveops-Independent Contractor, Work At Home</h1>
+                                    <h1>Independent Contractor at LiveOps, Work At Home</h1>
                                     <p>July 2019 – Current</p>
                                 </hgroup>
                                 <div>
-                                    <p><strong>Environment</strong>Okta, Slack, Five9, Windows</p>
+                                    <p><strong>Environment : </strong>Okta, Slack, Five9, Windows</p>
                                 </div>
                                 <ul>
                                     <li>Working as an independent customer service contractor for different retail and non-retail clients.</li>
-                                    <li>Resolving products and accounts issues</li>
+                                    <li>Resolving products and accounts issues.</li>
                                 </ul>
                             </article>
                             <article>
