--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ body {
                     <b>Currently Focused On</b>
                     <p></p>
                     <p>Python and Django</p>
-                    <p>Finding A Job with Nice Pay & Good Project</p>
+                    <p>Finding A Job with Nice Pay & Good Project &#128521;</p>
                     <hr>
                     <!-- Languages -->
                     <span class="fa-stack">
