--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ body {
                     <hr>
                     <h5><b>Orchid Science College</b></h5>
                     <h6><i class="fa fa-calendar"></i> 2002 - 2004</h6>
-                    <p>Physics, Chemistry, Biology & Mathematics</p><br>
+                    <p>Physics, Chemistry, Biology & Mathematics</p>
                     
                 </div>
             </div>
