--- a/index2.html
+++ b/index2.html
@@ -346,7 +346,8 @@
                                     <li><a href="https://codepen.io/sachinsachin/#" target="_blank" style="color:black">Codepen.io Account</a></li>
                                     <li><a href="https://repl.it/@CiscoTest" target="_blank" style="color:black">Repl.it Account</a></li>
                                     <li><a href="https://www.sololearn.com/Profile/3050404" target="_blank" style="color:black">Sololearn Account</a></li>
-                                    <li><a href="https://www.facebook.com/lensupphotos/" target="_blank" style="color: black">Yes, I do photography as a hobby! Ask me anything on it!</a></li>
+                                    <li><a href="https://www.facebook.com/snrphotos/" target="_blank" style="color: black">Yes, I do photography as a hobby!</a></li>
+                                    
                                 </ul>
                             </article>
                         </section>
@@ -459,7 +460,7 @@
                                     <p>2005 - 2009</p>
                                 </hgroup>
                                 <ul>
-                                    <li>Information Technology ( NOT A GRAD ! )</li>
+                                    <li>Information Technology (NOT A GRAD !)</li>
                                 </ul>
                             </article>
                         </section>
