--- a/index2.html
+++ b/index2.html
@@ -358,9 +358,6 @@
                                     <h1>Independent Contractor at LiveOps, Work At Home</h1>
                                     <p>July 2019 – Current</p>
                                 </hgroup>
-                                <div>
-                                    <p><strong>Environment : </strong>Okta, Slack, Five9, Windows</p>
-                                </div>
                                 <ul>
                                     <li>Working as an independent customer service contractor for different retail and non-retail clients.</li>
                                     <li>Resolving products and accounts issues.</li>
@@ -371,19 +368,16 @@
                                     <h1>Senior Apple Advisor at Teleperformance, Work At Home</h1>
                                     <p>July 2017 – June 2019</p>
                                 </hgroup>
-                                <div>
-                                    <p><strong>Environment</strong>: macOS, iOS, Apple Multiple Internal Tools, Apple Support Articles, Apple Devices, MacOS Manuals, iOS Manuals, Apple Internal Use Only Articles.</p>
-                                </div>
                                 <ul>
                                     <li>Professionally handled software and hardware issues calls regarding Apple products such as Mac, iPhone, iPad, iPod and other apple accessories.troubleshooting skills.</li>
-                                    <li>Dug in-depth system folders to find the root cause of the issue, followed internal apple documents and verified google searches to solve the performance and other issues.</li>
+                                    <li>Dug in-depth for system folders to find the root cause of the issue, followed internal apple documents and verified google searches to solve the performance and other issues.</li>
                                     <li>Used soft-skills and right set of questions to get to the main cause of the issue.</li>
-                                    <li>Requested screen-sharing sessions on iOS and Mac devices while assuring trust and maintaining privacy for the customer.</li>
+                                    <li>Requested screen-sharing sessions on iOS and Mac devices while assuring solution and maintained privacy for the customer.</li>
                                     <li>Isolated & categorized issues to keep proper written logs of software and hardware issues.</li>
                                     <li>Setup repair appointment for hardware related issues.</li>
                                     <li>Studied and reported arising software and hardware issues with Apple products.</li>
                                     <li>Worked on new bugs generated with every software updates and freshly launched Apple products.</li>
-                                    <li>Maintained proper access to consumers apple id, icloud account and private information.</li>
+                                    <li>Maintained proper access to consumers apple id, iCloud account and private information.</li>
                                     <li>Received numerous completely satisfied surveys(goals achieved up-to 100%) and kudos from numerous apple consumers.</li>
                                 </ul>
                             </article>
@@ -392,9 +386,6 @@
                                     <h1>Web Developer at United Health Group, Short-Term Contract Hire</h1>
                                     <p>February 2017 – May 2017</p>
                                 </hgroup>
-                                <div>
-                                    <p><strong>Environment</strong>: HTML, CSS, Java, JSP, JSTL, jQuery, AngularJS, Spring MVC, XML, DB2,Fortify, MyEclipse Blue 2014, Aqua Data Studio, Websphere Application Server, Maven,Tortoise SVN, Rally, KornShell.</p>
-                                </div>
                                 <ul>
                                     <li>Worked under scrum concepts of agile methodology by attending scrum calls for tasks iterations, tasks reporting and final product demos.</li>
                                     <li>Worked with Spring open source framework for improving existing web application as well as creating attractive graphical user interface based on old and new prototypes.</li>
@@ -414,9 +405,6 @@
                                     <h1>Remote Services Technician at Support.com, Work At Home </h1>
                                     <p>December 2015 - January 2017 </p>
                                 </hgroup>
-                                <div>
-                                    <p><strong>Environment</strong>: Windows 7/10, Einstein 2.0, Avaya, CiscoVPN, RDS browser, SDC Workbench, Spark, BlueJeans, Various DSL Modems, Routers.</p>
-                                </div>
                                 <ul>
                                     <li>Professionally handled calls passed on by tiers associated with Comcast customers Internet issues.</li>
                                     <li>Studied Signal levels in details to look for RF issues and scheduled a technician if needed to correct the reported issue.</li>
@@ -429,9 +417,6 @@
                                     <h1>IT Support Assistant at Academic Computer Center, MNSU </h1>
                                     <p>November 2007 - May 2009</p>
                                 </hgroup>
-                                <div>
-                                    <p><strong>Environment</strong>: Windows XP, Vista, Server, Microsoft Office, BOOTP, Windows Deployment Services</p>
-                                </div>
                                 <ul>
                                     <li>Supported IT leads in deploying and configuring Window OS in several buildings on campus.</li>
                                     <li>Used PXE boot, Wake on LAN(WOL), and protocols like BOOTP/DHCP/TFTP.</li>
