--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@ body {
                     </span>
                     <b>My Skills</b>
                     <p></p>
-                    <p>HTML, CSS, Bootstrap 4, Django </p>
+                    <p>HTML, CSS, JavaScript </p>
                     <div class="progress">
                         <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:80%">
                             80% Complete
                         </div>
                     </div>
-                    <p>JavaScript, AJAX, jQuery, AngularJS</p>
+                    <p> React , AJAX, jQuery, AngularJS</p>
                     <div class="progress">
                         <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:60%">
                             60% Complete
