--- a/index2.html
+++ b/index2.html
@@ -256,21 +256,20 @@
                                     <li>CSS</li>
                                     <li>JavaScript</li>
                                     <li>React</li>
-                                    <li>Python</li>
                                     <li>Django</li>
-                                    <li>BootStrap 4</li>
+                                    <li>BootStrap</li>
                                     <li>PostgreSQL</li>
                                     <li>PHP</li>
-                                    <li>Java</li>
                                     <li>WAMP & XAMPP</li>
                                     <li>Git & GitHub</li>
                                     <li>Lightroom & Photoshop</li>
                                 </ul>
+                                <hr>
                                 <ul>
                                     <li>HTML [ Forms, Graphics, Media, APIs, HTML5 ]</li>
                                 </ul>
                                 <ul>
-                                    <li>CSS [ Float, Flexbox, Grid, Animations, Responsive ]</li>
+                                    <li>CSS [ Float, Flexbox, Grid, Animations, Responsive Web Design]</li>
                                 </ul>
                                 <ul>
                                     <li>JavaScript [ Forms, Objects, Functions, HTML DOM, Browser BOM, AJAX, JSON, JS vs jQuery ]</li>
@@ -278,6 +277,7 @@
                                 <ul>
                                     <li>Colors [ www.colorhexa.com ]</li>
                                 </ul>
+                                <hr>
                             </div>
                             <div>
                                 <h2>Self Explored</h2>
@@ -292,9 +292,10 @@
                                     <li>Hiberate</li>
                                     <li>Korn Shell</li>
                                     <li>WordPress</li>
-                                    <li>Red Hat Linux Commands</li>
-                                    <li>Cisco Routing & Switching</li>
+                                    <li>RHEL Commands</li>
+                                    <li>CCNA Commands</li>
                                 </ul>
+                                <hr>
                             </div>
                             <div>
                                 <h2>IDE's & Other Tools Explored</h2>
@@ -303,25 +304,20 @@
                                     <li>Pycharm</li>
                                     <li>Sublime Text</li>
                                     <li>Eclipse</li>
-                                    <li>Notepad++</li>
                                     <li>Firefox, Chrome Dev Tools</li>
                                     <li>Putty</li>
                                     <li>FileZilla</li>
                                     <li>Packet Tracer</li>
-                                    <li>Adobe Photoshop</li>
-                                    <li>Adobe Illustrator</li>
-                                    <li>Responsive Web Design</li>
                                     <li>Photography</li>
                                 </ul>
+                                <hr>
                             </div>
                             <div>
                                 <h2>Operating System Explored</h2>
                                 <ul>
-                                    <li>Ubuntu</li>
-                                    <li>MacOS, OS X & iOS</li>
-                                    <li>Windows XP, Vista, 7, 8 & 10</li>
-                                    <li>RHEL OS</li>
-                                    <li>CentOS</li>
+                                    <li>Ubuntu/CentOS</li>
+                                    <li>macOS, OS X & iOS</li>
+                                    <li>Windows</li>
                                 </ul>
                             </div>
                         </section>
@@ -336,9 +332,10 @@
                                 </div>
                                 <ul>
                                     <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Github Powered Portfolio Website (sachinkrb.github.io)</a></li>
-                                    <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">Working on Responsive Design Website Prototype for Django Project (Current) </a></li>
-                                    <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">Working on a Makeup Website for Spouse (Current) </a></li>
-                                    <li><a href="http://linuxchats.com/" target="_blank" style="color:black">Linux Chats Website built using Wordpress as CMS (linuxchats.com)</a></li>
+                                    <li><a href="https://sachinkrb.github.io/" target="_blank" style="color:black">Quick summary of Github Account</a></li>
+                                    <li><a href="https://sachinkrb.github.io/index3.html" style="color:black">RWD Prototype for Django Project (Current) </a></li>
+                                    <li><a href="https://sachinkrb.github.io/Learning_Grids/index.html" style="color:black">Makeup Website for Spouse (Current) </a></li>
+                                    <li><a href="http://linuxchats.com/" target="_blank" style="color:black">Linux Chats Website (Wordpress as CMS, linuxchats.com)</a></li>
                                     <li><a style=" color: black;" href="howtohtmlcss.pdf" download> Personal Research-How To Start Best HTML&CSS Coding </a></li>
                                     <li><a href="https://github.com/sachinkrb?tab=repositories" target="_blank" style="color:black">Github Account For Current Projects (github.com/sachinkrb)</a></li>
                                     <li><a href="https://sachinkrb.github.io/skeleton-test/index.html" style="color:black">Reminder Lists For Creations </a></li>
